--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@
 # When using Spring Data JPA, use: spring-data-jpa
 # ------------------------------------------------
 
-spring.profiles.active=h2,spring-data-jpa
+spring.profiles.active=mysql,spring-data-jpav
 
 # ------------------------------------------------
 
